# sphinx-theme

./: .coverage  .gitignore  noxfile.py  package-lock.json  poetry.toml  pyproject.toml  webpack.config.js
docs/: conf.py  index.md  quickstart.rst
docs/customisation/: sidebar.md
docs/kitchen-sink/: blocks.rst  lists.rst
docs/reference/: images.md
src/sphinx_theme/: __init__.py
src/sphinx_theme/assets/styles/: _scaffold.sass
src/sphinx_theme/assets/styles/variables/: _colors.scss  _layout.scss  _spacing.scss
src/sphinx_theme/theme/sphinx-theme/: page.html  theme.conf
src/sphinx_theme/theme/sphinx-theme/components/: edit-this-page-link.html
src/sphinx_theme/theme/sphinx-theme/partials/: icons.html
src/sphinx_theme/theme/sphinx-theme/static/scripts/: sphinx-theme-extensions.js  sphinx-theme.js
src/sphinx_theme/theme/sphinx-theme/static/styles/: sphinx-theme-extensions.css  sphinx-theme.css
tests/sites/base/: conf.py
tests/workflow/: test_sphinx_versions.py
